--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@ body {
   font-family: Arial, sans-serif;
 }
 
-div {
-  padding: 20px;
-}
+/* div {
+  padding: 50px;
+} */
 
 body {
   font-family: "Source Sans Pro", "Arial", sans-serif;
