--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,13 +1,54 @@
+body {
+  margin: 0;
+  font-family:'Roboto', sans-serif;
+  background-color: #f9f9f9;;
+  font-size: 16px;
+ 
+ 
+}
+
+.Blog {
+  max-width: 2400px;
+  background-image: url(./images/Blog-bg.jpeg);
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-position: center;  
+}
+
 .container {
   padding: 20px;
   max-width: 800px;
   margin: auto;
+  
 }
 
 h1 {
+  font-size: 48px;
+  font-family: Montserrat,Bold;
   color: #333;
+  padding-top: 5px;
+  padding-bottom: 8px;
+}
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #333;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin:40px 0 20px;;
+}
+p {
+  font-size: 1rem; 
+  margin-bottom: 1rem; 
+  color: #555; 
+  font-family: Roboto;
+  
+  
+}
+li {
+  color: #666;
+  gap: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
-p {
-  color: #666;
-}
