--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,7 +12,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-    gap: 20px;
+    gap: 30px;
 }
  
 .footer-summary {
@@ -21,7 +21,7 @@
     flex-wrap: wrap;
     max-width: 300px;
     max-height: 300px;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-top: 2px;
     font-family:"Roboto" , sans-serif;
 }
@@ -44,7 +44,8 @@
  
 .footer-Quicklinks{
     display: flex;
-    justify-content: left;
+    justify-content: right;
+    text-align: left;
     flex-wrap: wrap;
     max-width: 150px;
     max-height: 100px;
@@ -54,21 +55,22 @@
  
 .footer-Resources {
     display: flex;
-    justify-content: left;
+    justify-content: right;
+    text-align: left;
     flex-wrap: wrap;
-    max-width: 50px;
+    max-width: 100px;
     max-height: 100px;
-    margin-right: 5px;
+    margin-right: 10px;
     margin-top: 2px;
 }
  
-.contact {
+.footer-contact {
     display: flex;
-    justify-content: left;
+    justify-content: right;
     flex-wrap: wrap;
     max-width: 300px;
-    max-height: 350px;
-    padding-top: 1px;
+    max-height: 250px;
+    padding-top: 2px;
     padding-right: 10px;
 }
  
@@ -76,8 +78,9 @@
     max-width: 300px;
     padding-top: 1px;
     display: flex;
-    justify-content: left;
-    gap: 10px;
+    justify-content: right;
+    padding-right: 10px;
+    gap: 5px;
 }
 .footer-icons a{
     color: #fff;
