--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,18 +1,17 @@
 .footer {
     background-color: #111;
     color: #fff;
-    padding: 20px 0;
+    padding: 20 0;
     font-size: 14px;
 }
  
 .footer-container {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
-    gap: 30px;
+    padding: 20px;
+    gap: 100px;
 }
  
 .footer-summary {
@@ -21,7 +20,7 @@
     flex-wrap: wrap;
     max-width: 300px;
     max-height: 300px;
-    margin-left: 5px;
+    margin-left: -80px;
     margin-top: 2px;
     font-family:"Roboto" , sans-serif;
 }
@@ -50,7 +49,7 @@
     max-width: 150px;
     max-height: 100px;
     margin-top: 2px;
-    margin-left: 30px;
+    margin-left: -30px;
 }
  
 .footer-Resources {
@@ -66,21 +65,17 @@
  
 .footer-contact {
     display: flex;
-    justify-content: right;
-    flex-wrap: wrap;
-    max-width: 300px;
-    max-height: 250px;
-    padding-top: 2px;
-    padding-right: 10px;
+    flex-direction: column;
+    margin-right: -80px;
 }
  
 .footer-icons {
-    max-width: 300px;
-    padding-top: 1px;
     display: flex;
-    justify-content: right;
-    padding-right: 10px;
-    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    padding: 0;
+   
 }
 .footer-icons a{
     color: #fff;
