--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,14 +6,12 @@ body {
 
 .navbar {
   background: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-  padding: 5px;
-  margin: 0;
-  position: fixed;
+  position:absolute;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 100;
-  height: 6vh;
+  height: 6.5vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,7 +20,7 @@ body {
 
 .navbar-container {
   display: flex;
-  align-items: center;
+  align-items:center;
   width: 100%;
   justify-content: space-between;
 }
@@ -31,22 +29,28 @@ body {
   font-size: 1.5em;
   font-weight: bold;
   color: #ffffff;
-}
+  padding-bottom: 0;
+  line-height: 1;
 
+}
+/* 
 .navbar-logo a {
   text-decoration: none;
   color: #ffffff;
-}
+} */
 
 .navbar-list {
   list-style: none;
   display: flex;
   margin: 0;
-  padding: 0;
+  padding-bottom:0;
+  align-items: center;
 }
 
 .navbar-item {
-  margin: 0 15px;
+  margin: 0 20px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar-item a {
@@ -54,11 +58,7 @@ body {
   color: #f4eded;
   font-size: 1.2em;
   transition: color 0.3s;
-}
-
-.search-form input {
-  border-radius: 5px;
-  padding: 3px
+  line-height: 1;
 }
 
 .navbar-item a:hover {
