--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,21 +3,29 @@
   justify-content: space-between;
   align-items: center;
   background-color: #333;
-  padding: 10px ;
   position: relative;
-  height: 6.5vh;
-}
+  height: 6vh;
 
+}
+.menu {
+  display: flex;
+  gap: 10px;
+  background-color: transparent;
+  position: static;
+  width: auto;
+}
 
 .menu-icon {
   display: none;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: white;
   cursor: pointer;
+  position: relative;
+  z-index: 10000;
 }
 
 .navbar-logo a {
-  font-size: 1.4rem; 
+  font-size: 1.6rem; 
 }
 
 .menu {
@@ -28,8 +36,8 @@
 .menu a {
   color: white;
   text-decoration: none;
-  padding: 4px;
-  font-size: 1.2rem;
+  padding: 4px 8px;
+  font-size: 1.5rem;
 }
 
 .menu a:hover {
@@ -42,11 +50,14 @@
     display: none;
     flex-direction: column;
     position: absolute;
+    z-index: 9999;
     top: 60px;
     right: 10px;
     background-color: #333;
     border-radius: 5px;
     padding: 10px;
+    width: 20%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .menu.open {
