--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -26,6 +26,8 @@ body {
   padding: 70px;
   border-radius: 10px;
   width: 80%;
+  text-align: center;
+  height: 50%;
 }
 
 .hero-section h1 {
@@ -51,6 +53,7 @@ body {
 }
 
 .project-cards {
+  margin-top: 2em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -70,6 +73,21 @@ body {
 }
 
 .project-card h3 {
-  color: #4682b4; /* Match button color for consistency */
+  color: #4682b4; 
+  text-decoration: none;
   padding-bottom: 2px;
+}
+
+@media (min-width: 600px) {
+  .project-card {
+    flex: 1 1 calc(50% - 40px); /* Two columns on medium screens */
+    max-width: calc(50% - 40px);
+  }
+}
+
+@media (min-width: 900px) {
+  .project-card {
+    flex: 1 1 calc(25% - 40px); /* Four columns on large screens */
+    max-width: calc(25% - 40px);
+  }
 }
