--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,31 +9,34 @@ body {
   padding-top: 30px; /* Adjust padding to account for fixed navbar */
 }
 
-.hero-section {
+.home-hero-section {
   background-size: cover;
-  background-position: center;
   position: relative;
-  height: 50vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 100px 20px;
+  width: inherit;
+  object-fit: cover;
   color: #ffffff;
+  width: 100%;
   text-align: center;
 }
 
-.hero-section .overlay {
-  background: rgba(249, 247, 247, 0.7); /* Black overlay with opacity */
-  padding: 50px;
+.home-hero-section .overlay {
+  background: rgba(237, 235, 235, 0.6); /* Black overlay with opacity */
+  padding: 70px;
   border-radius: 10px;
-  width: 90%;
+  display: inline-block;
+  max-width: 90%;
+  width: 80%;
+  box-sizing: border-box;
 }
 
-.hero-section h1 {
+.home-hero-section h1 {
   font-size: 4em;
   margin-bottom: 0.5em;
+  color: #333;
 }
 
-.hero-section p {
+.home-hero-section p {
   font-size: 1.2em;
   margin: 0.5em 0;
   color: #726e6e;
@@ -78,12 +81,89 @@ body {
   margin: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  flex: 1 1 calc(25% - 40px); /* Responsive design for four columns */
-  max-width: calc(25% - 40px); /* Responsive design for four columns */
+  flex: 1 1 calc(25% - 40px); 
+  max-width: calc(25% - 40px); 
   text-align: center;
 }
 
 .service-card h3 {
   color: #ff7f50;
 }
+
+@media (max-width: 1200px) {
+  .service-card {
+    flex: 1 1 calc(33.33% - 40px); 
+    max-width: calc(33.33% - 40px);
+  }
+  .home-hero-section {
+    height: 45vh; 
+  }
+  .home-hero-section .overlay {
+    padding: 40px;
+  }
+  .home-hero-section h1 {
+    font-size: 2.5em; 
+  }
+  .home-hero-section p {
+    font-size: 1.1em; 
+  }
+}
+
+@media (max-width: 900px) {
+  .service-card {
+    flex: 1 1 calc(50% - 40px); /* Two columns on smaller screens */
+    max-width: calc(50% - 40px);
+  }
+  .home-hero-section {
+    height: 40vh; /* Reduce height even more for smaller screens */
+  }
+  .home-hero-section .overlay {
+    padding: 30px;
+  }
+  .home-hero-section h1 {
+    font-size: 3em; 
+  }
+  .home-hero-section p {
+    font-size: 1em; 
+  }
+  .cta-button {
+    padding: 12px 24px;
+    font-size: 0.9em;
+  }
+}
+
+@media (max-width: 600px) {
+  .service-card {
+    flex: 1 1 100%; 
+    max-width: 100%;
+  }
+
+  .home-hero-section {
+    height: 35vh; 
+  }
+  .home-hero-section .overlay {
+    padding: 20px; 
+    max-width: 90%;
+    width: auto;
+  }
+
+  .home-hero-section h1 {
+    font-size: 1.2em; 
+  }
+  .home-hero-section p {
+    font-size: 0.9em;
+  }
+  .cta-button{
+    padding: 10px 20px;
+    font-size: 0.8em;
+  }
+}
+
+
+
+
+
+
+
+
 
