--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -23,9 +23,12 @@ body{
 
 .hero-section .overlay {
   background: rgba(245, 245, 245, 0.8); /* Light overlay with opacity */
-  padding: 30px;
+  padding: 50px;
   border-radius: 10px;
-  width: 80%;
+  width: 90%;
+  max-width: 100%;
+  text-align: center;
+  height: 100%;
 }
  
 .hero-section h1 {
@@ -70,4 +73,18 @@ body{
  
 .card h3 {
   color:#4682b4;
+}
+
+@media (min-width: 600px) {
+  .service-card {
+    flex: 1 1 calc(50% - 40px); /* Two columns on medium screens */
+    max-width: calc(50% - 40px);
+  }
+}
+
+@media (min-width: 900px) {
+  .service-card {
+    flex: 1 1 calc(25% - 40px); /* Four columns on large screens */
+    max-width: calc(25% - 40px);
+  }
 }
