--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -139,16 +139,24 @@ body {
   }
 
   .home-hero-section {
-    height: 35vh; 
+    padding: 20px;
+    height: 45vh; 
   }
   .home-hero-section .overlay {
-    padding: 20px; 
+    max-width: 90%;
+    width: auto;
+    height: 35vh;
+  }
+
+  .home-hero-section .overlay a{
     max-width: 90%;
     width: auto;
   }
 
-  .home-hero-section h1 {
-    font-size: 1.2em; 
+
+  .home-hero-section .overlay  h1 {
+    font-size: 2em; 
+    text-decoration: solid;
   }
   .home-hero-section p {
     font-size: 0.9em;
