--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -9,7 +9,7 @@ body {
   padding-top: 30px; /* Adjust padding to account for fixed navbar */
 }
 
-.hero-section {
+.project-hero {
   background-size: cover;
   background-position: center;
   position: relative;
@@ -21,7 +21,7 @@ body {
   text-align: center;
 }
 
-.hero-section .overlay {
+.project-hero .overlay {
   background: rgba(245, 245, 245, 0.8); /* Light overlay with opacity */
   padding: 70px;
   border-radius: 10px;
@@ -30,12 +30,12 @@ body {
   height: 50%;
 }
 
-.hero-section h1 {
+.project-hero h1 {
   font-size: 4em;
   margin-bottom: 0.5em;
 }
 
-.hero-section p {
+.project-hero p {
   font-size: 1.2em;
   margin: 0.5em 0;
 }
@@ -63,12 +63,13 @@ body {
 .project-card {
   background: white;
   padding: 20px;
-  margin: 20px;
+  margin: 0;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   flex: 1 1 calc(25% - 40px); /* Responsive design for four columns */
   max-width: calc(25% - 40px); /* Responsive design for four columns */
   text-align: center;
+ 
   
 }
 
@@ -78,16 +79,41 @@ body {
   padding-bottom: 2px;
 }
 
-@media (min-width: 600px) {
-  .project-card {
-    flex: 1 1 calc(50% - 40px); /* Two columns on medium screens */
-    max-width: calc(50% - 40px);
+@media (max-width: 600px) {
+  .project-cards {
+    flex-direction: column;
+    gap: 20px;
   }
+
+  .project-card {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+  .project-hero {
+    padding: 20px;
+    height: 60vh; 
+  }
+  .project-hero .overlay {
+    max-width: 90%;
+    width: auto;
+    height: 50vh;
+  }
+
+  .project-hero .overlay h1 {
+    font-size: 2em; 
+    text-decoration: solid;
+   
+  }
+  .service-hero-section p {
+    font-size: 1.2em;
+  
+  }
+
 }
 
-@media (min-width: 900px) {
-  .project-card {
-    flex: 1 1 calc(25% - 40px); /* Four columns on large screens */
-    max-width: calc(25% - 40px);
+@media (max-width: 900px) {
+  .service-card {
+    flex: 1 1 calc(45% - 40px); 
+     max-width: calc(45% - 40px);
   }
-}
+ } 
