--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -9,7 +9,7 @@ body{
   padding-top: 30px;
  
 }
-.hero-section {
+.service-hero-section {
   background-size: cover;
   background-position: center;
   position: relative;
@@ -21,22 +21,21 @@ body{
   text-align: center;
 }
 
-.hero-section .overlay {
+.service-hero-section .overlay {
   background: rgba(245, 245, 245, 0.8); /* Light overlay with opacity */
-  padding: 50px;
+  padding: 70px;
   border-radius: 10px;
-  width: 90%;
-  max-width: 100%;
+  width: 80%;
   text-align: center;
-  height: 100%;
+  height: 50%;
 }
  
-.hero-section h1 {
+.service-hero-section h1 {
   font-size: 4em;
   margin-bottom: 0.5em;
 }
  
-.hero-section p {
+.service-hero-section p {
   font-size: 1.2em;
   margin: 0.5em 0;
 }
@@ -75,16 +74,34 @@ body{
   color:#4682b4;
 }
 
-@media (min-width: 600px) {
-  .service-card {
-    flex: 1 1 calc(50% - 40px); /* Two columns on medium screens */
-    max-width: calc(50% - 40px);
+@media (max-width: 600px) {
+  .service-cards {
+    flex: 1 1 calc(90% - 10px); /* Two columns on medium screens */
+    max-width: calc(90% - 10px);
+  }
+
+  .service-hero-section {
+    padding: 20px;
+    height: 58vh; 
+  }
+  .service-hero-section .overlay {
+    max-width: 90%;
+    width: auto;
+    height: 50vh;
+  }
+
+  .service-hero-section .overlay  h1 {
+    font-size: 2.2em; 
+    text-decoration: solid;
+  }
+  .service-hero-section p {
+    font-size: 1.2em;
   }
 }
 
-@media (min-width: 900px) {
+@media (max-width: 900px) {
   .service-card {
-    flex: 1 1 calc(25% - 40px); /* Four columns on large screens */
-    max-width: calc(25% - 40px);
+    flex: 1 1 calc(25% - 40px); 
+     max-width: calc(25% - 40px);
   }
-}
+ } 
